alignment fixed?

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -73,7 +73,7 @@ header > nav > ul
 
 header > nav > ul > li,
 header > nav > ul > a,
-header > nav > ul a  li,
+header > nav > ul > div > a > li,
 header > nav > ul > div > a
 {
     display: table-cell;
@@ -83,11 +83,6 @@ header > nav > ul > div > a
     text-align: center;
     text-decoration: none;
     height: 100%;
-}
-header > nav > ul > div > a > li
-{
-    display: list-item;
-    text-align: -webkit-match-parent;
 }
 
 
